--- a/PrCel/PrCel/MainPage.xaml
+++ b/PrCel/PrCel/MainPage.xaml
@@ -9,33 +9,17 @@
             Spacing="25">
 
             <Button
-                Text="Pagina de Celulares"
+                Text=" Primeira Pagina"
                 x:Name="btnCelulares"
                 Clicked="btnCelulares_Clicked"
                 />
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                Text="Segunda Pagina"
+                x:Name="BtnCelulares2"
+                Clicked="btnCelulares_Clicked"
+                />
+            
         </VerticalStackLayout>
     </ScrollView>
 
