--- a/PrCel/PrCel/ListaProdutoPage.xaml
+++ b/PrCel/PrCel/ListaProdutoPage.xaml
@@ -2,11 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PrCel.ListaProdutoPage"
+             xmlns:local="clr-namespace:PrCel"
              Title="ListaProdutoPage">
     <VerticalStackLayout>
         <ListView>
-            <ListView.ItemTemplate>
-                <DataTemplate>
+            <ListView.ItemTemplate x:name="Listadeproduto">
+                <DataTemplate x:DataType="local:Celulares">
                     <ViewCell>
                         <Grid>
                             <Grid.RowDefinitions>
